# 42cursus

./: .env  .env.dev  .zshrc  Dockerfile  Makefile  docker-compose.yml  ex04.c  nettoyage_systeme_linux.sh  print_hex2.c
CPP/: ex04_cpp01.txt
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha  ft_isalpha.c  ft_isalphaa.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+5 more)
Minitalk/: client.c  minitalk_bonus.h  server_bonus.c
PHP_FORM/: README.md  commands.sh  commands.sql  index.php  treatment.php
WebServ/: CMakeLists.txt  parsing  parsing.cpp  parsing.hpp  parsing2  parsing2.cpp  parsing2.hpp  test.cpp
WebServ/test/: CMakeCache.txt  CMakeLists.txt  parsing_tests.cpp
born2beroot/: signature.txt
cpy_makefile/: Makefile  Makefile1
cub3D/: Makefile  cub3D  test.txt
db_pgsql_save/: mydb_2024-11-29_133534.sql
exam02/: add_prime_sum.c  epur_str.c  fizzbuzz.c  flood_fill.c  flood_fill.h  fprime.c  ft_atoi.c  ft_itoa.c  ft_list.h  ft_list_foreach.c  ft_list_foreach2.c  ft_range2.c  ft_rrange.c  ft_strcpy.c  ft_strdup.c  ft_strpbrk.c  ft_strspn.c  ft_swap.c  inter.c  is_power_of_2.c  lstsize.h  max.c  paramsum.c  pgcd2.c  print_hex.c  rev_wstr  (+13 more)
(+684 files in other folders)
